--- a/portal-angular-product/package.json
+++ b/portal-angular-product/package.json
@@ -25,6 +25,10 @@
     "rxjs": "~6.6.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^4.9.2",
+    "angular2-text-mask": "^9.0.0",
+    "ngx-spinner": "^11.0.1",
+    "ngx-toastr": "^12.0.1",
+    "ng-brazil": "^2.4.4",
     "systemjs": "^6.9.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
