feat(bootstrap): configurar subscrita do bootstrap no root-config

--- a/portal-single-spa/package.json
+++ b/portal-single-spa/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "@types/jest": "^26.0.16",
     "@types/systemjs": "^6.1.0",
-    "single-spa": "^5.8.2",
-    "@types/webpack-env": "^1.16.0"
+    "@types/webpack-env": "^1.16.0",
+    "bootstrap": "^5.0.2",
+    "single-spa": "^5.8.2"
   }
 }
